fix the delete and updte function
